--- a/resources/assets/js/shop/views/shop.view.html
+++ b/resources/assets/js/shop/views/shop.view.html
@@ -1,7 +1,7 @@
 <div class="wrapping" style="padding: 20px;">
     <!-- Reservation Form -->
     <form ng-submit="submitForm(shop_.$valid)" role="form" autocomplete="off" name="shop_" novalidate>
-
+        Cart: {{ cart | json }}
         <!-- Pre-order Information -->
         <div class="form-container" id="preorder-form">
             <div class="form-header"><h3 class="form-title">Shop</h3></div>
@@ -10,21 +10,21 @@
                     <h3 class="section-title">Categories</h3>
                     <ul class="category-menu">
                         <li ng-repeat="category in categories | orderBy:'name' track by $index">
-                            <a href="" ng-click="loadCategoryMenus($event)" data-id="{{ category.id }}" ng-class="catactive == 'catactive{{ category.id }}' ? 'active' : ''" class="menu{{ $index }}">{{ category.name }}<i class="fa fa-angle-right"></i></a>
+                            <a href="" ng-click="loadCategoryMenus(category)" data-id="{{ category.id }}" ng-class="catactive == 'catactive{{ category.id }}' ? 'active' : ''" class="menu{{ $index }}">{{ category.name }}<i class="fa fa-angle-right"></i></a>
                         </li>
                     </ul>
                 </div>
                 <div class="menu">
                     <h3 class="section-title">{{ default_catname }} Menu</h3>
                     <ul class="listing-menu" data-catid="{{ default_catid }}">
-                        <li ng-repeat="item in default_catmenu track by $index">
+                        <li ng-repeat="item in products | filter: filterByCategory">
                             <div class="item-box">
                                 <div class="item-pic"></div>
                                 <h4 class="item-name">{{ item.name }}</h4>
-                                <p class="item-price">Php {{ item.price }}</p>
-                                <a href="" class="btn btn-block btn-default" ng-click="addToBag($event)" data-item="{{ item.id }}">
-                                    <i class="fa fa-shopping-bag fa-left"></i>Add to Bag
-                                </a>
+                                <p class="item-price">{{ item.price | currency:'Php' }}</p>
+                                <button class="btn btn-block btn-default" ng-click="addToCart(item)" data-item="{{ item.id }}">
+                                    <i class="fa fa-shopping-bag fa-left"></i>Add to Cart
+                                </button>
                             </div>
                         </li>
                     </ul>
@@ -35,7 +35,7 @@
                         <span><i class="fa fa-shopping-bag"></i>You don't have pre-order menu</span>
                     </p>
                     <ul class="summary-listing" ng-if="preorder != 0">
-                        <li ng-repeat="item in preorder track by $index">
+                        <li ng-repeat="item in cart track by $index">
                             <a href="" class="summary-remove" ng-click="removeFromBag(item)"><i class="fa fa-trash"></i></a>
                             <p class="summary-name">{{ item.name }}</p>
                             <div class="colleft">
@@ -53,12 +53,8 @@
                         </li>
                     </ul>
                     <div class="summary-footer" ng-if="preorder != 0">
-                        <p class="labels">VAT</p>
-                        <p class="totals">12%</p>
-                        <p class="labels">Subtotal</p>
-                        <p class="totals">Php 999,999</p>
                         <p class="labels">Total</p>
-                        <p class="totals">Php 999,999</p>
+                        <p class="totals">{{ getCartTotal() | currency: 'Php' }} </p>
                     </div>
                     <h3 class="section-title" ng-if="preorder != 0">Notes</h3>
                     <textarea name="" id="" class="summary-notes" ng-if="preorder != 0"></textarea>
