--- a/resources/assets/js/shop/views/shop.view.html
+++ b/resources/assets/js/shop/views/shop.view.html
@@ -59,11 +59,8 @@
                     <h3 class="section-title" ng-if="preorder != 0">Notes</h3>
                     <textarea name="" id="" class="summary-notes" ng-if="preorder != 0"></textarea>
                     <div class="form-footer">
-                        <div class="colmn6 colmn-offset-right">
-                            <a href="" class="btn btn-default btn-block" ng-click="reservationInfo()"><i class="fa fa-angle-left fa-left"></i>Back</a>
-                        </div>
                         <div class="colmn6 colmn-offset-left">
-                            <a href="" class="btn btn-success btn-block" ng-click="customerInfo()">Continue<i class="fa fa-angle-right fa-right"></i></a>
+                            <a href="" class="btn btn-success btn-block" ng-click="doCheckout()">Continue<i class="fa fa-angle-right fa-right"></i></a>
                         </div>
                     </div>
                 </div>
