--- a/resources/assets/js/shop/views/shop.view.html
+++ b/resources/assets/js/shop/views/shop.view.html
@@ -35,20 +35,21 @@
                         <span><i class="fa fa-shopping-bag"></i>You don't have pre-order menu</span>
                     </p>
                     <ul class="summary-listing" ng-if="preorder != 0">
-                        <li ng-repeat="item in cart track by $index">
-                            <a href="" class="summary-remove" ng-click="removeFromBag(item)"><i class="fa fa-trash"></i></a>
+                        <li ng-repeat="(key, item) in cart">
+                            {{ key }}
+                            <a href="" class="summary-remove" ng-click="removeFromBag(key, item)"><i class="fa fa-trash"></i>Remove</a>
                             <p class="summary-name">{{ item.name }}</p>
                             <div class="colleft">
                                 <p class="summary-collabel">Price</p>
                                 <p class="summary-price">Php {{ item.price }}</p>
                             </div>
                             <div class="colcenter">
-                                <p class="summary-collabel">Qtty</p>
-                                <input type="text" name="" value="{{ item.quantity }}" class="summary-quantity" ng-model="item.quantity"/>
+                                <p class="summary-collabel">Qty</p>
+                                <input type="number" min="1" name="" value="{{ item.qty }}" class="summary-quantity" ng-model="item.qty" ng-change="updateQty(key, item)" />
                             </div>
                             <div class="colright">
                                 <p class="summary-collabel">subtotal</p>
-                                <p class="summary-subtotal">Php {{ item.quantity * item.price }}</p>
+                                <p class="summary-subtotal">{{ item.qty * item.price | currency: 'Php '}}</p>
                             </div>
                         </li>
                     </ul>
@@ -56,8 +57,8 @@
                         <p class="labels">Total</p>
                         <p class="totals">{{ getCartTotal() | currency: 'Php' }} </p>
                     </div>
-                    <h3 class="section-title" ng-if="preorder != 0">Notes</h3>
-                    <textarea name="" id="" class="summary-notes" ng-if="preorder != 0"></textarea>
+                    <!--<h3 class="section-title" ng-if="preorder != 0">Notes</h3>
+                    <textarea name="" id="" class="summary-notes" ng-if="preorder != 0"></textarea>-->
                     <div class="form-footer">
                         <div class="colmn6 colmn-offset-left">
                             <a href="" class="btn btn-success btn-block" ng-click="doCheckout()">Continue<i class="fa fa-angle-right fa-right"></i></a>
